# Razorpay_jShop

./: .gitignore  README.md  manage.py  populate_products.py  pyproject.toml
jewelry_project/: asgi.py  settings.py  urls.py  wsgi.py
shop/: admin.py  models.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_initial.py
shop/templates/shop/: base.html  cart.html  checkout.html  failure.html  index.html  success.html
templates/: base.html  home.html
templates/registration/: login.html  register.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
